--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "nodemailer": "^4.1.1",
     "stripe": "^5.0.0"
   }
 }
